Made background colors lighter

--- a/css/capsule.css
+++ b/css/capsule.css
@@ -25,18 +25,18 @@
   box-shadow: inset -2px -2px 0px #eeeeee; }
 
 .cc-bulma {
-  background-color: #D2EAE7;
+  background-color: #EAF5F4;
   border-color: #00D1B2;
   outline-color: #00D1B2;
   color: #205C53 !important; }
 
 .cc-bulma.cc-ctrl[type=button]:hover {
-  background-color: #d7ece9; }
+  background-color: #ecf6f5; }
 
 .cc-bulma.cc-ctrl[type=button]:active {
   border-color: #80e8d9;
   outline-color: #80e8d9;
-  background-color: #bdd3d0; }
+  background-color: #d3dddc; }
 
 .cc-bulma .cc-ctrl[type=radio] + label {
   border-color: #00D1B2;
@@ -45,21 +45,21 @@
 .cc-bulma.cc-ctrl[type=checkbox]:checked + label,
 .cc-bulma .cc-ctrl[type=radio]:checked + label {
   background-color: #00D1B2;
-  box-shadow: inset -2px -2px 0px #D2EAE7; }
+  box-shadow: inset -2px -2px 0px #EAF5F4; }
 
 .cc-red {
-  background-color: #F4CBCB;
+  background-color: #FBECEC;
   border-color: #A33A3A;
   outline-color: #A33A3A;
   color: #250101 !important; }
 
 .cc-red.cc-ctrl[type=button]:hover {
-  background-color: #f5d0d0; }
+  background-color: #fbeeee; }
 
 .cc-red.cc-ctrl[type=button]:active {
   border-color: #d19d9d;
   outline-color: #d19d9d;
-  background-color: #dcb7b7; }
+  background-color: #e2d4d4; }
 
 .cc-red .cc-ctrl[type=radio] + label {
   border-color: #A33A3A;
@@ -68,7 +68,7 @@
 .cc-red.cc-ctrl[type=checkbox]:checked + label,
 .cc-red .cc-ctrl[type=radio]:checked + label {
   background-color: #A33A3A;
-  box-shadow: inset -2px -2px 0px #F4CBCB; }
+  box-shadow: inset -2px -2px 0px #FBECEC; }
 
 .ctrl-container {
   display: inline-block;
@@ -204,3 +204,5 @@ ul.cc-form {
 ul.cc-form li {
   padding: 5px;
   overflow: auto; }
+
+/*# sourceMappingURL=capsule.css.map */
