--- a/scss/capsule.scss
+++ b/scss/capsule.scss
@@ -9,12 +9,12 @@ $capsule-colors: (
     'bulma': (
         'primary': #00D1B2,
         'darker': #205C53,
-        'lighter': #D2EAE7,
+        'lighter': #EAF5F4,
     ),
     'red': (
         'primary': #A33A3A,
         'darker': #250101,
-        'lighter': #F4CBCB,
+        'lighter': #FBECEC,
     )
 );
 
