--- a/css/capsule.css
+++ b/css/capsule.css
@@ -95,6 +95,17 @@
   outline-width: 1px;
   outline-offset: 1px; }
 
+textarea.cc-ctrl {
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 5px 0 5px 0;
+  padding: 1px 3px; }
+
+textarea.cc-ctrl:focus {
+  outline-style: solid;
+  outline-width: 1px;
+  outline-offset: 1px; }
+
 .cc-ctrl[type=button] {
   border-width: 1px;
   border-style: solid;
@@ -204,5 +215,3 @@ ul.cc-form {
 ul.cc-form li {
   padding: 5px;
   overflow: auto; }
-
-/*# sourceMappingURL=capsule.css.map */
